@@ -1,5 +1,8 @@
 This file documents the revision history for mod_gearman.
 
+next:
+          - fix backslashes in plugin_output
+
 5.1.3 Tue Oct 17 23:32:07 CEST 2023
           - check_dummy: fix crash if output is empty
           - check_dummy: support putting return code in quotes
